--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
+    "install": "^0.13.0",
     "react": "19.0.0",
     "react-native": "0.79.6"
   },
