--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.4"
+    "react-native-screens": "^4.15.4",
+    "expo-sqlite": "~14.0.6"
+
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
